--- a/login.css
+++ b/login.css
@@ -45,4 +45,15 @@
     color: white;
     cursor: pointer;
   }
+
+  a {
+    background-color: #3498db;
+    color: white;
+    padding: 10px;
+    font-size: 1em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
   
